--- a/video2.html
+++ b/video2.html
@@ -40,8 +40,8 @@
     <div id="player-container">
         <video id="myVideo" controls>
             <source src="hola.mp4" type="video/mp4">
-            <track src="/asscents/hola.vtt" kind="subtitles" srclang="en" label="English" default>
-            <track src="/asscents/hola.vtt" kind="subtitles" srclang="en" label="Español" default>
+            <track src="/asscents/english.vtt" kind="subtitles" srclang="en" label="English" default>
+            <track src="/asscents/spanish.vtt" kind="subtitles" srclang="es" label="Español" default>
         </video>
     </div>
 
