--- a/video2.html
+++ b/video2.html
@@ -33,7 +33,7 @@
             color: #fff;
         }
     </style>
-    <title>Document</title>
+    <title>videp subtitle</title>
 </head>
 
 <body>
