--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <button id="generateBtn" class="mt-5 px-4 py-2 bg-blue-500 text-white rounded">Generar Otras Imágenes</button>
   </div>
 
+  <button> <a href="/video2.html">Video2</a></button>
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
   <script src="script.js"></script>
